--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9094
-server.servlet.context-path=/parking
-server.servlet.application-display-name=/parking
+server.servlet.context-path=/ingdb
+server.servlet.application-display-name=/ingdb
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -11,12 +11,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 #spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://13.233.49.242:3306/parking?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&autoReconnect=true&allowPublicKeyRetrieval=true&
+spring.datasource.url=jdbc:mysql://40.114.50.246:3306/ingdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&autoReconnect=true&allowPublicKeyRetrieval=true&
 spring.datasource.username= inguser1
-spring.datasource.password= H@ckath0n
+spring.datasource.password= admin@123
 
 
-sonar.host.url=http://13.233.49.242:9000
+sonar.host.url=http://40.114.50.246:9000
 
 #spring.mail.host = smtp.gmail.com
 #spring.mail.username =kkrpcs@gmail.com
