--- a/pom.xml
+++ b/pom.xml
@@ -115,4 +115,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	<pluginGroups>
+        <pluginGroup>org.sonarsource.scanner.maven</pluginGroup>
+    </pluginGroups>
 </project>
